# yt-live_llm-bot

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  gemini.rs  lib.rs  main.rs
src/domain/: conversation.rs
src/model/: conversation.rs  emotion.rs  gemini.rs  mod.rs
src/service/: audio.rs  avatar.rs  gemini.rs  mod.rs  prompt.rs  tts.rs  youtube.rs  youtube_chat.rs
src/service/api/: gemini_client.rs
src/service/media/: avatar_osc.rs
