[package]
name = "ai_tuber"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
async-stream = "0.3"
reqwest     = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dotenvy     = "0.15"
cpal        = "0.15"
rodio       = "0.17.3"
once_cell   = "1"
youtube_chat     = "0.2"
